@@ -1,6 +1,5 @@
 package dk.digitalidentity.controller.rest;
 
-import dk.digitalidentity.dao.UserDao;
 import dk.digitalidentity.dao.grid.TaskGridDao;
 import dk.digitalidentity.mapping.TaskMapper;
 import dk.digitalidentity.model.dto.PageDTO;
@@ -8,18 +7,22 @@ import dk.digitalidentity.model.dto.TaskDTO;
 import dk.digitalidentity.model.entity.User;
 import dk.digitalidentity.model.entity.grid.TaskGrid;
 import dk.digitalidentity.security.RequireUser;
+import dk.digitalidentity.service.UserService;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.apache.commons.lang3.tuple.Pair;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.util.Arrays;
 import java.util.List;
@@ -28,17 +31,11 @@ import java.util.List;
 @RestController
 @RequestMapping("rest/tasks")
 @RequireUser
+@RequiredArgsConstructor
 public class TaskRestController {
-    @Autowired
-    private final UserDao userDao;
+    private final UserService userService;
     private final TaskGridDao taskGridDao;
     private final TaskMapper mapper;
-
-    public TaskRestController(final UserDao userDao, final TaskGridDao taskGridDao, final TaskMapper mapper) {
-        this.userDao = userDao;
-        this.taskGridDao = taskGridDao;
-        this.mapper = mapper;
-    }
 
     @PostMapping("list")
     public PageDTO<TaskDTO> list(
@@ -56,7 +53,7 @@ public class TaskRestController {
         Page<TaskGrid> tasks = null;
         if (StringUtils.isNotEmpty(search)) {
             // search and page
-            final List<String> searchableProperties = Arrays.asList("name", "taskType", "responsibleUser.name" , "responsibleOU.name", "nextDeadline", "localizedEnums");
+            final List<String> searchableProperties = Arrays.asList("name", "taskType", "responsibleUser.name", "responsibleOU.name", "nextDeadline", "localizedEnums", "tags");
             tasks = taskGridDao.findAllCustom(searchableProperties, search, sortAndPage, TaskGrid.class);
         } else {
             // Fetch paged and sorted
@@ -68,27 +65,27 @@ public class TaskRestController {
 
     @PostMapping("list/{id}")
     public PageDTO<TaskDTO> list(
-        @PathVariable(name = "id", required = true) final String uuid,
+        @PathVariable(name = "id") final String userUuid,
         @RequestParam(name = "search", required = false) final String search,
         @RequestParam(name = "page", required = false) final Integer page,
         @RequestParam(name = "size", required = false) final Integer size,
         @RequestParam(name = "order", required = false) final String order,
         @RequestParam(name = "dir", required = false) final String dir) {
         Sort sort = null;
-        final User user = userDao.findByUuidAndActiveIsTrue(uuid);
+        final User user = userService.findByUuid(userUuid).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
         if (StringUtils.isNotEmpty(order) && containsField(order)) {
             final Sort.Direction direction = Sort.Direction.fromOptionalString(dir).orElse(Sort.Direction.ASC);
             sort = Sort.by(direction, order);
         }
         final Pageable sortAndPage = sort != null ?  PageRequest.of(page, size, sort) : PageRequest.of(page, size);
-        Page<TaskGrid> tasks = null;
+        final Page<TaskGrid> tasks;
         if (StringUtils.isNotEmpty(search)) {
             // search and page
-            final List<String> searchableProperties = Arrays.asList("name", "responsibleOU.name", "nextDeadline", "localizedEnums", "completed");
-            tasks = taskGridDao.findAllCustomForResponsibleUser(searchableProperties, search, sortAndPage, TaskGrid.class, user);
+            final List<String> searchableProperties = Arrays.asList("name", "responsibleOU.name", "nextDeadline", "localizedEnums", "completed", "tags");
+            tasks = taskGridDao.findAllCustomExtra(searchableProperties, search, List.of(Pair.of("responsibleUser", user), Pair.of("completed", false)), sortAndPage, TaskGrid.class);
         } else {
             // Fetch paged and sorted
-            tasks = taskGridDao.findAllByResponsibleUser(user, sortAndPage);
+            tasks = taskGridDao.findAllByResponsibleUserAndCompletedFalse(user, sortAndPage);
         }
         assert tasks != null;
         return new PageDTO<>(tasks.getTotalElements(), mapper.toDTO(tasks.getContent()));
@@ -97,6 +94,6 @@ public class TaskRestController {
     private boolean containsField(final String fieldName) {
         return fieldName.equals("name") || fieldName.equals("taskType") || fieldName.equals("responsibleUser") || fieldName.equals("responsibleOU")
                 || fieldName.equals("nextDeadline") || fieldName.equals("taskRepetition")
-                || fieldName.equals("status");
+                || fieldName.equals("taskResult") || fieldName.equals("tags");
     }
 }
